# mono-kickstart

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json.bak
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: MIGRATION.md  Mono-Kickstart-PRD.md  PACKAGING_VERIFICATION.md  TASK_21.4_SUMMARY.md  copilot-cli-guide.md
docs/.kiro/specs/mono-kickstart/: design.md  requirements.md  tasks.md
docs/examples/: copilot-cli-config.yaml
scripts/: install.sh
src/mono_kickstart/: __init__.py  __main__.py  cli.py  config.py  errors.py  installer_base.py  interactive.py  logger.py  mirror_config.py  orchestrator.py  platform_detector.py  project_creator.py  shell_completion.py  tool_detector.py
src/mono_kickstart/installers/: __init__.py  bmad_installer.py  bun_installer.py  claude_installer.py  codex_installer.py  conda_installer.py  copilot_installer.py  gh_installer.py  node_installer.py  npx_installer.py  nvm_installer.py  opencode_installer.py  spec_kit_installer.py  uipro_installer.py  uv_installer.py
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_config_loading.py  test_init_flow.py  test_upgrade_flow.py
tests/packaging/: test_packaging_verification.sh
tests/property/: __init__.py  test_cli_properties.py  test_codex_install_method.py  test_config_properties.py  test_copilot_installer_properties.py  test_copilot_installer_properties_task8.py  test_orchestrator_properties.py  test_platform_detector_properties.py  test_project_creator_properties.py
tests/unit/: __init__.py  test_bmad_installer.py  test_bun_installer.py  test_claude_installer.py  test_claude_mcp.py  test_claude_show.py  test_claude_skills.py  test_cli.py  test_codex_installer.py  test_conda_installer.py  test_config.py  test_copilot_installer.py  test_dd.py  test_entry_points.py  test_errors.py  test_gh_installer.py  test_installer_base.py  test_interactive.py  test_logger.py  test_mirror_config.py  test_node_installer.py  test_nvm_installer.py  test_opencode_installer.py  test_orchestrator.py  test_platform_detector.py  test_project_creator.py  test_shell_completion.py  test_spec_kit_installer.py  test_tool_detector.py  test_uipro_installer.py  test_uv_installer.py
